Replace local fira mono instance with CDN
I'm planning to do the same for font awesome too, although that's less urgent because that is not bundled

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import '@fontsource/fira-mono';
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap');
 
 :root {
 	--ff-monospace: 'Fira Mono', 'Courier New', monospace;
